# xtracepp

./: CMakeLists.txt  README.md  atoms.c  copyauth.c  final_parse_state_dump.c  main.c  print_protocol.c  print_protocol.h  stringlist.c  stringlist.h  translate.c  translate.h  x11client.c
cmake/: Getcmake_utils.cmake  Getfmt.cmake
src/: CMakeLists.txt  Connection.cpp  DisplayInfo.cpp  IntermediaryServer.cpp  ProxyX11Server.cpp  ProxyX11Server__fetchCurrentServerTime.cpp  ProxyX11Server_prequeue_clients.cpp  Settings.cpp  SocketBuffer.cpp  X11ProtocolParser.cpp  X11ProtocolParser__core_errors.cpp  X11ProtocolParser__core_events.cpp  X11ProtocolParser__core_requests.cpp  X11ProtocolParser__format.cpp  X11ProtocolParser__formatCommonType.cpp  X11ProtocolParser__formatProtocolType.cpp  X11ProtocolParser__formatVariable.cpp  X11ProtocolParser__logClientInitiation.cpp  X11ProtocolParser__logClientRequest.cpp  X11ProtocolParser__logConnInitiation.cpp  X11ProtocolParser__logConnResponse.cpp  X11ProtocolParser__logConnectionSetup.cpp  X11ProtocolParser__logError.cpp  X11ProtocolParser__logEvent.cpp  X11ProtocolParser__logReply.cpp  X11ProtocolParser__logRequest.cpp  X11ProtocolParser__logServerError.cpp  X11ProtocolParser__logServerEvent.cpp  X11ProtocolParser__logServerReply.cpp  X11ProtocolParser__logServerResponse.cpp  X11ProtocolParser__parseError.cpp  X11ProtocolParser__parseEvent.cpp  X11ProtocolParser__parseListMember.cpp  X11ProtocolParser__parseProtocolType.cpp  X11ProtocolParser__parseReply.cpp  X11ProtocolParser__parseRequest.cpp  bufferHexDump.cpp  errors.cpp  main.cpp  protocol_enum_names.cpp
src/extensions/: CMakeLists.txt  X11ProtocolParser__extensions.cpp  X11ProtocolParser__parseRequest.cpp
src/extensions/big_requests/: CMakeLists.txt  X11ProtocolParser__parseReply.cpp  X11ProtocolParser__parseRequest.cpp
src/include/: Connection.hpp  DisplayInfo.hpp  Extensions.hpp  IntermediaryServer.hpp  ProxyX11Server.hpp  Settings.hpp  SocketBuffer.hpp  X11ProtocolParser.hpp  bufferHexDump.hpp  connection_setup.hpp  errors.hpp
src/include/protocol/: Message.hpp  Response.hpp  atoms.hpp  common_types.hpp  connection_setup.hpp  enum_names.hpp  errors.hpp  events.hpp  predefined_atoms.hpp  requests.hpp  version.hpp
src/include/protocol/extensions/: big_requests.hpp  requests.hpp
src/include/protocol/extensions/big_requests/: name.hpp  requests.hpp
test/: 001_CreateWindow_test.cpp  CMakeLists.txt  all_atoms.cpp  core_error_test.cpp  core_event_test_sendevent.cpp  core_reply_test.cpp  core_request_test.cpp  error_test.cpp  event_test_sendevent.cpp  prefetchatoms_test.cpp  reply_test.cpp  request_test.cpp  systemtimeformat_test.cpp
test/extensions/: CMakeLists.txt
test/extensions/big_requests/: CMakeLists.txt  request_test.cpp
xtrace_orig/: CMakeLists.txt  README.md  main.c  parse.c  parse.h  x11common.c  x11server.c  xtrace.h
